--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -25,13 +25,13 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.PUSH_TOKEN }}
+#      - uses: actions/checkout@v2
+#        with:
+#          token: ${{ secrets.PUSH_TOKEN }}
       - name: Set env
         run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
-      - name: Test
-        run: echo $BRANCH_NAME
+#      - name: Test
+#        run: echo $BRANCH_NAME
       #      - name: Extract branch name
       #        id: extract_branch
       #        run: |
