--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -1,4 +1,4 @@
-name: DEV DEPLOY2
+name: DEV DEPLOY
 
 on:
   push:
@@ -21,24 +21,44 @@ on:
         default: false
         description: DB_MIGRATION
 jobs:
-  workflow_ci:
+  ci:
+    if: ${{ github.event.inputs.NPM_BUILD && github.event_name == 'workflow_dispatch' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source code.   # 레포지토리 체크아웃
+        if: github.event.inputs.NPM_BUILD
+        uses: actions/checkout@master
+        with:
+          token: ${{ secrets.GIT_TOKEN }}
+      - name: Set up Node
+        if: github.event.inputs.NPM_BUILD
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install Dependencies    # 의존 파일 설치
+        if: github.event.inputs.NPM_BUILD
+        run: npm install
+      - name: Install Dependencies    # 빌드
+        if: github.event.inputs.NPM_BUILD
+        run: npm run production
+      - name: Transfer Deploy Script use SCP # 빌드파일 서버로 전송
+        if: github.event.inputs.NPM_BUILD
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.DEV_HOST }}
+          username: ${{ secrets.DEV_SSH_NAME }}
+          password: ${{ secrets.DEV_SSH_PASSWORD }}
+          port: ${{ secrets.DEV_PORT }}
+          source: "public"
+          target: ${{ secrets.MASTER_PATH }}/public/dist
+          strip_components: 1
+  deploy:
+    needs: ci
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
-#      - uses: actions/checkout@v2
-#        with:
-#          token: ${{ secrets.PUSH_TOKEN }}
       - name: Set env
         run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
-#      - name: Test
-#        run: echo $BRANCH_NAME
-      #      - name: Extract branch name
-      #        id: extract_branch
-      #        run: |
-      #          echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
-      #          BRANCH=${GITHUB_REF#refs/heads/}
-      #          echo "${BRANCH}"
-      #          echo "${GITHUB_REF#refs/heads/}"
       - name: Deploy to production
         uses: appleboy/ssh-action@master
         env:
@@ -60,8 +80,5 @@ jobs:
             cd ${{ secrets.MASTER_PATH }}
             echo "Current branch on server is: ${{ env.BRANCH_NAME }}"
 
-            git checkout ${{ env.BRANCH_NAME }}
-            ../dev-deploy.sh
-
-#            echo ${GITHUB_REF#refs/heads/}
-
+#            git checkout ${{ env.BRANCH_NAME }}
+#            ../dev-deploy.sh
