--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -71,11 +71,11 @@ jobs:
         #          BRANCH_NAME: ${{ steps.extract_branch.outputs.BRANCH_NAME }}
         #          BRANCH_NAME: ${GITHUB_REF#refs/heads/}
         with:
-          host: ${{ secrets.SSH_SERVER }}
-          username: ${{ secrets.SSH_NAME }}
-          password: ${{ secrets.SSH_PASSWORD }}
-          port: ${{ secrets.SSH_PORT }}
-          envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION
+          host: ${{ secrets.DEV_HOST }}
+          username: ${{ secrets.DEV_SSH_NAME }}
+          password: ${{ secrets.DEV_SSH_PASSWORD }}
+          port: ${{ secrets.DEV_PORT }}
+          envs: COMPOSER_INSTALL,NPM_INSTALL,NPM_BUILD,DB_MIGRATION,BRANCH
           script: |
             cd ${{ secrets.DEV_MASTER_PATH }}
             echo "Current branch on server is: ${{ env.BRANCH_NAME }}"
