--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -81,4 +81,4 @@ jobs:
             echo "Current branch on server is: ${{ env.BRANCH_NAME }}"
 
 #            git checkout ${{ env.BRANCH_NAME }}
-#            ../dev-deploy.sh
+            ../dev-deploy.sh
