--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -26,23 +26,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code.   # 레포지토리 체크아웃
-        if: github.event.inputs.NPM_BUILD
+        if: ${{ github.event.inputs.NPM_BUILD }}
         uses: actions/checkout@master
         with:
           token: ${{ secrets.GIT_TOKEN }}
       - name: Set up Node
-        if: github.event.inputs.NPM_BUILD
+        if: ${{ github.event.inputs.NPM_BUILD }}
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
       - name: Install Dependencies    # 의존 파일 설치
-        if: github.event.inputs.NPM_BUILD
+        if: ${{ github.event.inputs.NPM_BUILD }}
         run: npm install
       - name: Install Dependencies    # 빌드
-        if: github.event.inputs.NPM_BUILD
+        if: ${{ github.event.inputs.NPM_BUILD }}
         run: npm run production
       - name: Transfer Deploy Script use SCP # 빌드파일 서버로 전송
-        if: github.event.inputs.NPM_BUILD
+        if: ${{ github.event.inputs.NPM_BUILD }}
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.DEV_HOST }}
