--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -22,7 +22,8 @@ on:
         description: DB_MIGRATION
 jobs:
   ci:
-    if: ${{ github.event.inputs.NPM_BUILD && github.event_name == 'workflow_dispatch' }}
+#    if: ${{ github.event.inputs.NPM_BUILD && github.event_name == 'workflow_dispatch' }}
+    if: github.event.inputs.NPM_BUILD
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code.   # 레포지토리 체크아웃
