--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -26,7 +26,8 @@ on:
         description: DB_MIGRATION
 jobs:
   ci:
-    if: ${{ !!(github.event.inputs.NPM_BUILD) && !!(github.event_name == 'workflow_dispatch') }}
+    if: false
+#    ${{ !!(github.event.inputs.NPM_BUILD) && !!(github.event_name == 'workflow_dispatch') }}
     runs-on: ubuntu-latest
     steps:
       - name: run test
