--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -30,9 +30,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: run test
-        if: github.event.inputs.NPM_BUILD
+        if: ${{ github.event.inputs.NPM_BUILD }}
         run: |
           echo ${{ github.event.inputs.NPM_BUILD == 'true' }}
+          echo ${{ github.event.inputs.NPM_BUILD == true }}
+          echo ${{ github.event.inputs.NPM_BUILD == false }}
           echo ${{ github.event.inputs.NPM_BUILD }}
           echo ${{ !!github.event.inputs.NPM_BUILD }}
           echo ${{ github.event_name == 'workflow_dispatch' }}
