--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -53,17 +53,17 @@ jobs:
       - name: Install Dependencies    # 빌드
         if: ${{ github.event.inputs.NPM_BUILD == true }}
         run: npm run production
-      - name: Transfer Deploy Script use SCP # 빌드파일 서버로 전송
-        if: ${{ github.event.inputs.NPM_BUILD == true }}
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.DEV_HOST }}
-          username: ${{ secrets.DEV_SSH_NAME }}
-          password: ${{ secrets.DEV_SSH_PASSWORD }}
-          port: ${{ secrets.DEV_PORT }}
-          source: "public"
-          target: ${{ secrets.DEV_MASTER_PATH }}/public/dist
-          strip_components: 1
+#      - name: Transfer Deploy Script use SCP # 빌드파일 서버로 전송
+#        if: ${{ github.event.inputs.NPM_BUILD == true }}
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.DEV_HOST }}
+#          username: ${{ secrets.DEV_SSH_NAME }}
+#          password: ${{ secrets.DEV_SSH_PASSWORD }}
+#          port: ${{ secrets.DEV_PORT }}
+#          source: "public"
+#          target: ${{ secrets.DEV_MASTER_PATH }}/public/dist
+#          strip_components: 1
 #  deploy:
 #    needs: ci
 #    if: github.event_name == 'workflow_dispatch'
