--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -29,14 +29,15 @@ jobs:
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
-      - name: run test
-        if: ${{ github.event.inputs.NPM_BUILD }}
+      - name: run echo test
         run: |
           echo ${{ github.event.inputs.NPM_BUILD }}
           echo ${{ github.event_name == 'workflow_dispatch' }}
-
-
           echo declare -p ${{ github.event.inputs.NPM_BUILD }}
+      - name: run NPM_BUILD true
+        if: ${{ github.event.inputs.NPM_BUILD }}
+        run: |
+          echo ${{ github.event.inputs.NPM_BUILD }}
       - name: Checkout source code.   # 레포지토리 체크아웃
         if: ${{ github.event.inputs.NPM_BUILD == true }}
         uses: actions/checkout@master
