--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -21,39 +21,63 @@ on:
         default: false
         description: DB_MIGRATION
 jobs:
-#  ci:
-#    if: github.event_name == 'workflow_dispatch'
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout source code.   # 레포지토리 체크아웃
-#        if: ${{ inputs.NPM_BUILD }}
-#        uses: actions/checkout@master
-#        with:
-#          token: ${{ secrets.GIT_TOKEN }}
-#      - name: Set up Node
-#        if: ${{ inputs.NPM_BUILD }}
-#        uses: actions/setup-node@v1
-#        with:
-#          node-version: '12.x'
-#      - name: Install Dependencies    # 의존 파일 설치
-#        if: ${{ inputs.NPM_BUILD }}
-#        run: npm install
-#      - name: Install Dependencies    # 빌드
-#        if: ${{ inputs.NPM_BUILD }}
-#        run: npm run production
-#      - name: Transfer Deploy Script use SCP # 빌드파일 서버로 전송
-#        if: ${{ inputs.NPM_BUILD }}
-#        uses: appleboy/scp-action@master
-#        with:
-#          host: ${{ secrets.DEV_HOST }}
-#          username: ${{ secrets.DEV_SSH_NAME }}
-#          password: ${{ secrets.DEV_SSH_PASSWORD }}
-#          port: ${{ secrets.DEV_PORT }}
-#          source: "public"
-#          target: ${{ secrets.DEV_MASTER_PATH }}/public/dist
-#          strip_components: 1
+  check_git_diff:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set env
+        run: echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+      - name: Deploy to production
+        uses: appleboy/ssh-action@master
+        env:
+          COMPOSER_INSTALL: ${{ inputs.COMPOSER_INSTALL }}
+          NPM_INSTALL: ${{ inputs.NPM_INSTALL }}
+          DB_MIGRATION: ${{ inputs.DB_MIGRATION }}
+          BRANCH_NAME: ${{ env.BRANCH_NAME }}
+        with:
+          host: ${{ secrets.DEV_HOST }}
+          username: ${{ secrets.DEV_SSH_NAME }}
+          password: ${{ secrets.DEV_SSH_PASSWORD }}
+          port: ${{ secrets.DEV_PORT }}
+          envs: COMPOSER_INSTALL,NPM_INSTALL,DB_MIGRATION,BRANCH_NAME
+          script: |
+            if [ -n "$(git status --porcelain)" ]; then
+            echo "there are changes";
+            else
+            echo "no changes";
+            fi
+  ci:
+    if: github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source code.   # 레포지토리 체크아웃
+        if: ${{ inputs.NPM_BUILD }}
+        uses: actions/checkout@master
+        with:
+          token: ${{ secrets.GIT_TOKEN }}
+      - name: Set up Node
+        if: ${{ inputs.NPM_BUILD }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install Dependencies    # 의존 파일 설치
+        if: ${{ inputs.NPM_BUILD }}
+        run: npm install
+      - name: Install Dependencies    # 빌드
+        if: ${{ inputs.NPM_BUILD }}
+        run: npm run production
+      - name: Transfer Deploy Script use SCP # 빌드파일 서버로 전송
+        if: ${{ inputs.NPM_BUILD }}
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.DEV_HOST }}
+          username: ${{ secrets.DEV_SSH_NAME }}
+          password: ${{ secrets.DEV_SSH_PASSWORD }}
+          port: ${{ secrets.DEV_PORT }}
+          source: "public"
+          target: ${{ secrets.DEV_MASTER_PATH }}/public/dist
+          strip_components: 1
   deploy:
-#    needs: ci
+    needs: ci
     if: github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     steps:
